[gd_scene load_steps=3 format=2]

[ext_resource path="res://game/scenes/negotiation/EmploymentNegotiation.gd" type="Script" id=1]
[ext_resource path="res://game/scenes/ui/NegotiationValueChanger.tscn" type="PackedScene" id=2]

[node name="EmploymentNegotiation" type="Node2D"]
script = ExtResource( 1 )

[node name="ParentPanel" type="PanelContainer" parent="."]
margin_left = 64.0
margin_top = 384.0
margin_right = 960.0
margin_bottom = 776.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainHBox" type="HBoxContainer" parent="ParentPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 889.0
margin_bottom = 419.0
alignment = 1

[node name="OfferPanel" type="PanelContainer" parent="ParentPanel/MainHBox"]
margin_left = 15.0
margin_right = 282.0
margin_bottom = 412.0

[node name="VBoxContainer" type="VBoxContainer" parent="ParentPanel/MainHBox/OfferPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 260.0
margin_bottom = 405.0

[node name="Label" type="Label" parent="ParentPanel/MainHBox/OfferPanel/VBoxContainer"]
margin_right = 253.0
margin_bottom = 14.0
text = "Resum√©"

[node name="HSeparator4" type="HSeparator" parent="ParentPanel/MainHBox/OfferPanel/VBoxContainer"]
margin_top = 18.0
margin_right = 253.0
margin_bottom = 22.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label12" type="Label" parent="ParentPanel/MainHBox/OfferPanel/VBoxContainer"]
margin_top = 26.0
margin_right = 253.0
margin_bottom = 40.0
text = "Offer"

[node name="HSeparator8" type="HSeparator" parent="ParentPanel/MainHBox/OfferPanel/VBoxContainer"]
margin_top = 44.0
margin_right = 253.0
margin_bottom = 48.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="ParentPanel/MainHBox/OfferPanel/VBoxContainer"]
margin_top = 52.0
margin_right = 253.0
margin_bottom = 102.0

[node name="VBoxContainer" type="VBoxContainer" parent="ParentPanel/MainHBox/OfferPanel/VBoxContainer/HBoxContainer"]
margin_right = 115.0
margin_bottom = 50.0

[node name="Label" type="Label" parent="ParentPanel/MainHBox/OfferPanel/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 115.0
margin_bottom = 14.0
text = "They offer"

[node name="Label2" type="Label" parent="ParentPanel/MainHBox/OfferPanel/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 115.0
margin_bottom = 32.0
text = "30 days of service"

[node name="VSeparator" type="VSeparator" parent="ParentPanel/MainHBox/OfferPanel/VBoxContainer/HBoxContainer"]
margin_left = 119.0
margin_right = 123.0
margin_bottom = 50.0

[node name="VBoxContainer2" type="VBoxContainer" parent="ParentPanel/MainHBox/OfferPanel/VBoxContainer/HBoxContainer"]
margin_left = 127.0
margin_right = 253.0
margin_bottom = 50.0

[node name="Label" type="Label" parent="ParentPanel/MainHBox/OfferPanel/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_right = 126.0
margin_bottom = 14.0
text = "They want in return"

[node name="Label2" type="Label" parent="ParentPanel/MainHBox/OfferPanel/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 18.0
margin_right = 126.0
margin_bottom = 32.0
text = "$200 per day"

[node name="Label3" type="Label" parent="ParentPanel/MainHBox/OfferPanel/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 36.0
margin_right = 126.0
margin_bottom = 50.0
text = "10% of merch sales"

[node name="HSeparator7" type="HSeparator" parent="ParentPanel/MainHBox/OfferPanel/VBoxContainer"]
margin_top = 106.0
margin_right = 253.0
margin_bottom = 110.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label7" type="Label" parent="ParentPanel/MainHBox/OfferPanel/VBoxContainer"]
margin_top = 114.0
margin_right = 253.0
margin_bottom = 128.0
text = "Name: "

[node name="Label2" type="Label" parent="ParentPanel/MainHBox/OfferPanel/VBoxContainer"]
margin_top = 132.0
margin_right = 253.0
margin_bottom = 146.0
text = "Billy Biggs"

[node name="HSeparator" type="HSeparator" parent="ParentPanel/MainHBox/OfferPanel/VBoxContainer"]
margin_top = 150.0
margin_right = 253.0
margin_bottom = 154.0

[node name="Label3" type="Label" parent="ParentPanel/MainHBox/OfferPanel/VBoxContainer"]
margin_top = 158.0
margin_right = 253.0
margin_bottom = 172.0
text = "Power Rank:"

[node name="Label4" type="Label" parent="ParentPanel/MainHBox/OfferPanel/VBoxContainer"]
margin_top = 176.0
margin_right = 253.0
margin_bottom = 190.0
text = "54"

[node name="HSeparator2" type="HSeparator" parent="ParentPanel/MainHBox/OfferPanel/VBoxContainer"]
margin_top = 194.0
margin_right = 253.0
margin_bottom = 198.0

[node name="Label5" type="Label" parent="ParentPanel/MainHBox/OfferPanel/VBoxContainer"]
margin_top = 202.0
margin_right = 253.0
margin_bottom = 216.0
text = "Charisma:"

[node name="Label6" type="Label" parent="ParentPanel/MainHBox/OfferPanel/VBoxContainer"]
margin_top = 220.0
margin_right = 253.0
margin_bottom = 234.0
text = "57"

[node name="HSeparator3" type="HSeparator" parent="ParentPanel/MainHBox/OfferPanel/VBoxContainer"]
margin_top = 238.0
margin_right = 253.0
margin_bottom = 242.0

[node name="Label8" type="Label" parent="ParentPanel/MainHBox/OfferPanel/VBoxContainer"]
margin_top = 246.0
margin_right = 253.0
margin_bottom = 260.0
text = "Social Media Score:"

[node name="Label9" type="Label" parent="ParentPanel/MainHBox/OfferPanel/VBoxContainer"]
margin_top = 264.0
margin_right = 253.0
margin_bottom = 278.0
text = "40"

[node name="HSeparator5" type="HSeparator" parent="ParentPanel/MainHBox/OfferPanel/VBoxContainer"]
margin_top = 282.0
margin_right = 253.0
margin_bottom = 286.0

[node name="Label10" type="Label" parent="ParentPanel/MainHBox/OfferPanel/VBoxContainer"]
margin_top = 290.0
margin_right = 253.0
margin_bottom = 304.0
text = "Crimes Solved:"

[node name="Label11" type="Label" parent="ParentPanel/MainHBox/OfferPanel/VBoxContainer"]
margin_top = 308.0
margin_right = 253.0
margin_bottom = 322.0
text = "5"

[node name="HSeparator6" type="HSeparator" parent="ParentPanel/MainHBox/OfferPanel/VBoxContainer"]
margin_top = 326.0
margin_right = 253.0
margin_bottom = 330.0

[node name="HBoxContainer2" type="HBoxContainer" parent="ParentPanel/MainHBox/OfferPanel/VBoxContainer"]
margin_top = 334.0
margin_right = 253.0
margin_bottom = 354.0
alignment = 1

[node name="AcceptBtn" type="Button" parent="ParentPanel/MainHBox/OfferPanel/VBoxContainer/HBoxContainer2"]
margin_left = 34.0
margin_right = 126.0
margin_bottom = 20.0
text = "Accept Offer"

[node name="RejectBtn" type="Button" parent="ParentPanel/MainHBox/OfferPanel/VBoxContainer/HBoxContainer2"]
margin_left = 130.0
margin_right = 218.0
margin_bottom = 20.0
text = "Reject Offer"

[node name="CounterOfferPanel" type="PanelContainer" parent="ParentPanel/MainHBox"]
margin_left = 286.0
margin_right = 680.0
margin_bottom = 412.0

[node name="VBoxContainer2" type="VBoxContainer" parent="ParentPanel/MainHBox/CounterOfferPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 387.0
margin_bottom = 405.0

[node name="BlankLbl" type="Label" parent="ParentPanel/MainHBox/CounterOfferPanel/VBoxContainer2"]
margin_right = 380.0
margin_bottom = 14.0

[node name="HSeparator4" type="HSeparator" parent="ParentPanel/MainHBox/CounterOfferPanel/VBoxContainer2"]
margin_top = 18.0
margin_right = 380.0
margin_bottom = 22.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="ParentPanel/MainHBox/CounterOfferPanel/VBoxContainer2"]
margin_top = 26.0
margin_right = 380.0
margin_bottom = 40.0
text = "Counter-offer"

[node name="HSeparator3" type="HSeparator" parent="ParentPanel/MainHBox/CounterOfferPanel/VBoxContainer2"]
margin_top = 44.0
margin_right = 380.0
margin_bottom = 48.0

[node name="HBoxContainer" type="HBoxContainer" parent="ParentPanel/MainHBox/CounterOfferPanel/VBoxContainer2"]
margin_top = 52.0
margin_right = 380.0
margin_bottom = 306.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ParentPanel/MainHBox/CounterOfferPanel/VBoxContainer2/HBoxContainer"]
margin_right = 154.0
margin_bottom = 254.0

[node name="Label" type="Label" parent="ParentPanel/MainHBox/CounterOfferPanel/VBoxContainer2/HBoxContainer/VBoxContainer"]
margin_right = 154.0
margin_bottom = 14.0
text = "They provide"

[node name="NegotiationValueChanger6" parent="ParentPanel/MainHBox/CounterOfferPanel/VBoxContainer2/HBoxContainer/VBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 18.0
margin_right = 154.0
margin_bottom = 38.0
_value_name = "Days of Service"

[node name="VSeparator" type="VSeparator" parent="ParentPanel/MainHBox/CounterOfferPanel/VBoxContainer2/HBoxContainer"]
margin_left = 158.0
margin_right = 162.0
margin_bottom = 254.0

[node name="VBoxContainer2" type="VBoxContainer" parent="ParentPanel/MainHBox/CounterOfferPanel/VBoxContainer2/HBoxContainer"]
margin_left = 166.0
margin_right = 380.0
margin_bottom = 254.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="ParentPanel/MainHBox/CounterOfferPanel/VBoxContainer2/HBoxContainer/VBoxContainer2"]
margin_right = 214.0
margin_bottom = 14.0
text = "You provide"

[node name="NegotiationValueChanger" parent="ParentPanel/MainHBox/CounterOfferPanel/VBoxContainer2/HBoxContainer/VBoxContainer2" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 18.0
margin_right = 214.0
margin_bottom = 38.0
_value_name = "Daily Payment"

[node name="NegotiationValueChanger2" parent="ParentPanel/MainHBox/CounterOfferPanel/VBoxContainer2/HBoxContainer/VBoxContainer2" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 42.0
margin_right = 214.0
margin_bottom = 62.0
_value_name = "Merch %"

[node name="NegotiationValueChanger3" parent="ParentPanel/MainHBox/CounterOfferPanel/VBoxContainer2/HBoxContainer/VBoxContainer2" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 66.0
margin_right = 214.0
margin_bottom = 86.0
_value_name = "Public Appearance Fee"

[node name="NegotiationValueChanger4" parent="ParentPanel/MainHBox/CounterOfferPanel/VBoxContainer2/HBoxContainer/VBoxContainer2" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 90.0
margin_right = 214.0
margin_bottom = 110.0
_value_name = "Public Appearance %"

[node name="NegotiationValueChanger5" parent="ParentPanel/MainHBox/CounterOfferPanel/VBoxContainer2/HBoxContainer/VBoxContainer2" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 114.0
margin_right = 214.0
margin_bottom = 134.0
_value_name = "Crime Solve Bonus"

[node name="NegotiationValueChanger6" parent="ParentPanel/MainHBox/CounterOfferPanel/VBoxContainer2/HBoxContainer/VBoxContainer2" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 138.0
margin_right = 214.0
margin_bottom = 158.0
_value_name = "Termination Fee amount"

[node name="NegotiationValueChanger7" parent="ParentPanel/MainHBox/CounterOfferPanel/VBoxContainer2/HBoxContainer/VBoxContainer2" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 162.0
margin_right = 214.0
margin_bottom = 182.0
_value_name = "Termination Fee %"

[node name="NegotiationValueChanger8" parent="ParentPanel/MainHBox/CounterOfferPanel/VBoxContainer2/HBoxContainer/VBoxContainer2" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 186.0
margin_right = 214.0
margin_bottom = 206.0
_value_name = "Sign-up Bonus"

[node name="NegotiationValueChanger9" parent="ParentPanel/MainHBox/CounterOfferPanel/VBoxContainer2/HBoxContainer/VBoxContainer2" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 210.0
margin_right = 214.0
margin_bottom = 230.0
_value_name = "Movie/TV Bonus amount"

[node name="NegotiationValueChanger10" parent="ParentPanel/MainHBox/CounterOfferPanel/VBoxContainer2/HBoxContainer/VBoxContainer2" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 234.0
margin_right = 214.0
margin_bottom = 254.0
_value_name = "Movie/TV Bonus %"

[node name="HSeparator" type="HSeparator" parent="ParentPanel/MainHBox/CounterOfferPanel/VBoxContainer2"]
margin_top = 310.0
margin_right = 380.0
margin_bottom = 314.0

[node name="CounterOfferBtn" type="Button" parent="ParentPanel/MainHBox/CounterOfferPanel/VBoxContainer2"]
margin_top = 318.0
margin_right = 380.0
margin_bottom = 338.0
text = "Make Counter Offer"

[node name="HBoxContainer2" type="HBoxContainer" parent="ParentPanel/MainHBox/CounterOfferPanel/VBoxContainer2"]
margin_top = 342.0
margin_right = 380.0
margin_bottom = 356.0

[node name="Label" type="Label" parent="ParentPanel/MainHBox/CounterOfferPanel/VBoxContainer2/HBoxContainer2"]
margin_right = 158.0
margin_bottom = 14.0
text = "Counter-Offer response: "

[node name="Label2" type="Label" parent="ParentPanel/MainHBox/CounterOfferPanel/VBoxContainer2/HBoxContainer2"]
margin_left = 162.0
margin_right = 283.0
margin_bottom = 14.0
text = "Accepted/Rejected"

[node name="OptionsPanel" type="PanelContainer" parent="ParentPanel/MainHBox"]
margin_left = 684.0
margin_right = 867.0
margin_bottom = 412.0

[node name="VBoxContainer" type="VBoxContainer" parent="ParentPanel/MainHBox/OptionsPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 176.0
margin_bottom = 405.0

[node name="BlankLbl" type="Label" parent="ParentPanel/MainHBox/OptionsPanel/VBoxContainer"]
margin_right = 169.0
margin_bottom = 14.0

[node name="HSeparator4" type="HSeparator" parent="ParentPanel/MainHBox/OptionsPanel/VBoxContainer"]
margin_top = 18.0
margin_right = 169.0
margin_bottom = 22.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ParentPanel/MainHBox/OptionsPanel/VBoxContainer"]
margin_top = 26.0
margin_right = 169.0
margin_bottom = 40.0
text = "Offer Options"

[node name="HSeparator" type="HSeparator" parent="ParentPanel/MainHBox/OptionsPanel/VBoxContainer"]
margin_top = 44.0
margin_right = 169.0
margin_bottom = 48.0

[node name="DaysOfSrvceBtn" type="Button" parent="ParentPanel/MainHBox/OptionsPanel/VBoxContainer"]
margin_top = 52.0
margin_right = 169.0
margin_bottom = 72.0
toggle_mode = true
text = "Days of Service"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DailyPaymentBtn" type="Button" parent="ParentPanel/MainHBox/OptionsPanel/VBoxContainer"]
margin_top = 76.0
margin_right = 169.0
margin_bottom = 96.0
toggle_mode = true
text = "Daily Payment"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MerchBtn" type="Button" parent="ParentPanel/MainHBox/OptionsPanel/VBoxContainer"]
margin_top = 100.0
margin_right = 169.0
margin_bottom = 120.0
toggle_mode = true
text = "Merch %"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PubAppFeeBtn" type="Button" parent="ParentPanel/MainHBox/OptionsPanel/VBoxContainer"]
margin_top = 124.0
margin_right = 169.0
margin_bottom = 144.0
toggle_mode = true
text = "Public Appearance Fee"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PubApp%Btn" type="Button" parent="ParentPanel/MainHBox/OptionsPanel/VBoxContainer"]
margin_top = 148.0
margin_right = 169.0
margin_bottom = 168.0
toggle_mode = true
text = "Public Appearance %"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CrimeSolveBtn" type="Button" parent="ParentPanel/MainHBox/OptionsPanel/VBoxContainer"]
margin_top = 172.0
margin_right = 169.0
margin_bottom = 192.0
toggle_mode = true
text = "Crime Solve Bonus"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TerminationFeeAmBtn" type="Button" parent="ParentPanel/MainHBox/OptionsPanel/VBoxContainer"]
margin_top = 196.0
margin_right = 169.0
margin_bottom = 216.0
toggle_mode = true
text = "Termination Fee amount"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TerminationFee%Btn2" type="Button" parent="ParentPanel/MainHBox/OptionsPanel/VBoxContainer"]
margin_top = 220.0
margin_right = 169.0
margin_bottom = 240.0
toggle_mode = true
text = "Termination Fee %"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SignupBnsBtn" type="Button" parent="ParentPanel/MainHBox/OptionsPanel/VBoxContainer"]
margin_top = 244.0
margin_right = 169.0
margin_bottom = 264.0
toggle_mode = true
text = "Sign-up Bonus"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MovieTvBnsAmBtn" type="Button" parent="ParentPanel/MainHBox/OptionsPanel/VBoxContainer"]
margin_top = 268.0
margin_right = 169.0
margin_bottom = 288.0
toggle_mode = true
text = "Movie/TV Bonus amount"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MovieTvBns%Btn" type="Button" parent="ParentPanel/MainHBox/OptionsPanel/VBoxContainer"]
margin_top = 292.0
margin_right = 169.0
margin_bottom = 312.0
toggle_mode = true
text = "Movie/TV Bonus %"
__meta__ = {
"_edit_use_anchors_": false
}
